@@ -294,7 +294,13 @@ static apr_status_t open_connections(serf_context_t *ctx)
         apr_pool_clear(conn->skt_pool);
         apr_pool_cleanup_register(conn->skt_pool, conn, clean_skt, clean_skt);
 
-        if ((status = apr_socket_create(&skt, conn->address->family,
+        /* Do we have to connect to a proxy server? */
+        if (ctx->proxy_address)
+            serv_addr = ctx->proxy_address;
+        else
+            serv_addr = conn->address;
+
+        if ((status = apr_socket_create(&skt, serv_addr->family,
                                         SOCK_STREAM,
 #if APR_MAJOR_VERSION > 0
                                         APR_PROTO_TCP,
@@ -313,12 +319,6 @@ static apr_status_t open_connections(serf_context_t *ctx)
 
         /* Configured. Store it into the connection now. */
         conn->skt = skt;
-
-        /* Do we have to connect to a proxy server? */
-        if (ctx->proxy_address)
-            serv_addr = ctx->proxy_address;
-        else
-            serv_addr = conn->address;
 
         /* Now that the socket is set up, let's connect it. This should
          * return immediately.
